containers/kubernetes/jaeger/jaeger.deploy.yaml
# --------------------------------------------------------------------
# -- Debugging:
# kubectl describe deploy jaeger-deploy
# kubectl logs --selector app=jaeger
# kubectl get events --namespace=default
#
#
# kubectl exec -it deploy/jaeger-deploy -- /bin/ash
# kubectl exec -it deploy/jaeger-deploy -- env | sort
#
#
# -- Delete/Cleanup
# kubectl delete deploy jaeger-deploy;
#
#
# -- Official Jaeger Ports:
# - See https://www.jaegertracing.io/docs/1.52/deployment/
# --------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
  name: jaeger-deploy
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jaeger

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: jaeger

    spec:
      containers:
        - image: jaegertracing/all-in-one:1.52
          imagePullPolicy: IfNotPresent
          name: jaeger

          ports:
            - containerPort: 16686
              name: browser-ui

            - containerPort: 14268
              name: grpc-collector

            - containerPort: 9411
              name: zipkin

          resources:
            requests:
              cpu: 1500m

              # -- NOTE: when jaeger runs out of memory, the UI doesn't return any spans
              # -- Just restart since span data is persistent
              # -- See https://docs.docker.com/config/containers/resource_constraints/#limit-a-containers-access-to-memory
              memory: 1G

          volumeMounts:
            - mountPath: /badger
              name: beagle-volume
              readOnly: false

      volumes:
        - name: beagle-volume
          persistentVolumeClaim:
            claimName: jaeger-pvc

#   -p 14250:14250 \
#  -p 14269:14269 \
#  -p 4317:4317 \
#  -p 4318:4318 \
#  -p 5778:5778 \
#  -p 6831:6831/udp \
#  -p 6832:6832/udp \

#  # - 14250 = collector: model.proto
#  # - 14269 = admin, health check
#  # - 14271 = admin, health check
#  # - 16685 = query service
#  # - 16687 = query service
#  # - 4317 = collector: OpenTelemetry OTLP over grpc
#  # - 4318 = collector: OpenTelemetry OTLP over http
#  # - 6831 = compact thrift
#  # - 6832 = binary thrift


#  # TODO: set TTL on badger
#  # TODO: set max memory on badger
#
#  mkdir -pv "$BADGER_DATA_ROOT/key"
#  mkdir -pv "$BADGER_DATA_ROOT/data"
#
#  -v "$BADGER_DATA_ROOT":/badger:rw \
