containers/kubernetes/jaeger/jaeger.svc.yaml
# --------------------------------------------------------------------
# -- Debugging:
# kubectl describe svc jaeger-deploy
# kubectl get svc jaeger-deploy
#
# kubectl logs --selector app=jaeger
# kubectl get events --namespace=default
#
#
# -- Access inside cluster:
# http://jaeger-service:14268
# http://jaeger-service:16686
#
# -- Access outside cluster:
# -- See jaeger.ing.yaml
# --------------------------------------------------------------------

apiVersion: v1
kind: Service

metadata:
  labels:
    app: jaeger
  name: jaeger-service
  namespace: default

spec:
  ports:
    - name: grpc-collector
      port: 14268
      protocol: TCP
      targetPort: 14268

    - name: browser-ui
      port: 16686
      protocol: TCP
      targetPort: 16686

    # TODO: must I expose more ports?

  selector:
    app: jaeger

  type: ClusterIP
