containers/kubernetes/jaeger/jaeger.ing.yaml
# --------------------------------------------------------------------
# -- Debugging:
# kubectl describe ing my-ingress
# kubectl get events
#
#
# -- Jaeger specific:
# These two paths must match for Jaeger to work:
#     - deployment.spec.template.spec.containers.env.QUERY_BASE_PATH
#     - ingress.spec.rules.http.paths.path
#
#
# -- Accessing UI outside the cluster:
# echo "Navigate to:  http://$(minikube ip)/jaeger";
# --------------------------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-ingress
  namespace: default

spec:
  rules:
    - http:
        paths:
          # --- TODO: Add these to your existing Ingress

         # -- GOTCHA: path must match deployment.spec.template.spec.containers.env.QUERY_BASE_PATH
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                # -- must match service.metadata.name
                name: jaeger-service

                port:
                  # -- must match service port for browser ui
                  number: 16686
